--- a/CSS/feedback.css
+++ b/CSS/feedback.css
@@ -296,21 +296,38 @@ input[type="file"]:hover {
   margin-bottom: 4px;
 }
 
-@media (max-width: 768px) {
+.feedback-section {
+    padding: 1rem;
+}
+
+.article-title {
+    font-size: 2rem;
+}
+
+.rating {
+    font-size: 40px;
+    gap: 15px;
+}
+
+button[type="submit"] {
+    width: 100%;
+}
+
+@media (min-width: 769px) {
     .feedback-section {
-        padding: 1rem;
+        padding: 40px;
     }
 
     .article-title {
-        font-size: 2rem;
+        font-size: 2.5rem;
     }
 
     .rating {
-        font-size: 40px;
-        gap: 15px;
+        font-size: 70px;
+        gap: 25px;
     }
 
     button[type="submit"] {
-        width: 100%;
+        width: 300px;
     }
 }
